added email confirmation also